Update minecraft run scripts