@@ -1,2 +1,2 @@
-java -Xms6G -Xmx6G -jar forge.jar nogui
+java -server -Xms6G -Xmx6G -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=2 -XX:+AggressiveOpts -jar server.jar nogui
 pause
